# scripts

./: .gitignore  .pre-commit-config.yaml  README.md  apartment_search.py  calendar_events.py  calendar_events_mac.py  pyproject.toml  requirements.txt
src/: calendar_events.py  calendar_events_mac.py
