[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Scripts"
authors = [
    {name = "Sydney Jones", email = "sydney.u.jones@gmail.com"},
]
description = "Misc scripts for for screen scraping, utility functions, etc."
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.11.1",
    "charset-normalizer==2.1.1",
    "httpx==0.23.3",
    "pyperclip==1.8.2",
    "python-dateutil==2.8.2",
    "urllib3==1.26.13",
]

[tool.black]
line-length = 100

[tool.refurb]
python_version = "3.10"
